# return-guard

./: .clang-format  .gitignore  CMakeLists.txt  Notes.md  README.md
.github/workflows/: build.yml  experimental-hyprland-analysis.yml
cmake/: README.md  ReturnGuardConfig.cmake.in
docs/: hyprland-analysis-failures.md  instrumentation.md  large-projects.md  nullability.md
experiments/: apply_hyprland_lifetime_fix.py  hyprland-analysis-fixes.patch  hyprland-analysis-tests.patch
include/returnguard/: Contracts.h  Frontend.hpp  Nullability.h  Options.hpp  Runtime.h
runtime/: Runtime.c
scripts/: returnguard_compiler_launcher.py  returnguard_project.py  returnguard_project_runtime.py  returnguard_project_v2.py  returnguard_site_map.py
src/: BuildConfig.hpp.in  CompilationSetup.cpp  CompilationSetup.hpp  Frontend.cpp  Options.cpp  TestNative.cpp  main.cpp
src/internal/: APIntStringCompat.hpp  Analyzer.cpp  Analyzer.hpp  AnalyzerCalls.cpp  AnalyzerControlFlow.cpp  AnalyzerDiagnostics.cpp  AnalyzerDomains.cpp  AnalyzerFlow.cpp  AnalyzerFlowControl.cpp  AnalyzerInstrumentation.cpp  AnalyzerInvocationFix.inc  AnalyzerNullState.cpp  AnalyzerParents.cpp  AnalyzerSafety.cpp  AnalyzerSource.cpp  AnalyzerSummaries.cpp  AstUtils.cpp  AstUtils.hpp  CFGValueFlow.cpp  CFGValueFlow.hpp  ConditionEvaluator.cpp  ConditionEvaluator.hpp  ContractPolicy.cpp  ContractPolicy.hpp  DirectIf.hpp  DomainUtils.cpp  DomainUtils.hpp  HandlerFinder.cpp  HandlerFinder.hpp  IfChain.cpp  IfChain.hpp  Instrumentation.cpp  Instrumentation.hpp  InstrumentationFixed.cpp  Model.hpp  NullStateAnalysis.cpp  NullStateAnalysis.hpp  NullStateDriver.inc  NullStateModel.inc  NullStateModel_helpers.inc  (+15 more)
tests/: CMakeLists.txt  null_state_cpp_test.cmake  run_expect.py  test_allocator_policy.py  test_auto_compilation_setup.py  test_cmake_package.py  test_compiler_launcher.py  test_contract_policy.py  test_forwarded_instrumentation.py  test_instrumentation.py  test_invalid_instrumentation_contract.py  test_overload_metadata.py  test_project_runner.py  test_project_runner_scaling.py  test_readonly_launcher.py  test_runtime_registry_shutdown.py  test_site_metadata.py
tests/cases/: aliases.c  annotation_redeclaration.c  assignment_conditions.c  bool_address_escape.c  bool_assign_one_branch.c  bool_binding_condition.c  bool_const_binding_safe.c  bool_copy_init_safe.c  bool_multiple_assigns_join.c  bool_negated_init_safe.c  bool_predicate.c  bool_reassign_before_use.c  cfg_path_handling.c  comma_discard.c  comma_value.c  complex_array_index_and_oob.c  complex_double_free_and_uaf.c  complex_function_pointer_and_callbacks.c  complex_guard_clauses.c  complex_memcpy_aliasing.c  complex_nested_member_return.c  complex_pointer_copy_and_return.c  complex_pointer_to_pointer_aliasing.c  complex_shift_overflow.c  compound_assignment.c  conditional_expressions.c  cpp_calls.cpp  cross_function_globals.c  direct_if.c  enums.c  forwarded.c  function_config.rg  function_config_lifetime.c  guard_clauses.c  if_chains.c  ignored.c  inference.c  inference_cfg.c  inference_complex.c  instrumentation.c  (+45 more)
tests/cases/include/: expanded_system_api.hpp  vendor_system_api.hpp
tests/include/: status_api.h  unsafe_header.h
